# coral-tpu-mcp

./: AGENTS.md  GEMINI.md  README.md  pyproject.toml  start-mcp.sh  verify_tpu_mcp.py
src/coral_tpu_mcp/: __init__.py  __main__.py  server.py  tpu_engine.py
tests/: __init__.py  conftest.py  test_inference.py  test_mcp_server.py  test_model_management.py  test_tpu_engine.py
